@@ -53,14 +53,7 @@ public:
 LCCLogDemonsToolBox::LCCLogDemonsToolBox(QWidget *parent) : medAbstractSelectableToolBox(parent), d(new LCCLogDemonsToolBoxPrivate)
 {
     QWidget *widget = new QWidget(this);
-
     QVBoxLayout * layout = new QVBoxLayout();
-
-    QLabel *explanation = new QLabel("Drop 2 datasets with same size and spacing.\n");
-    explanation->setSizePolicy(QSizePolicy::Ignored, QSizePolicy::Preferred);
-    explanation->setWordWrap(true);
-    explanation->setStyleSheet("font: italic");
-    layout->addWidget(explanation);
 
     // Standard parameters
     d->iterationsLine = new QLineEdit();
