@@ -160,12 +160,12 @@ template <typename PixelType, typename TransformType> int manualRegistrationPriv
     typedef itk::ResampleImageFilter< MovingImageType,MovingImageType,TransformScalarType >    ResampleFilterType;
     typename ResampleFilterType::Pointer resampler = ResampleFilterType::New();
     resampler->SetTransform(transform);
-    resampler->SetInput((const MovingImageType*)proc->movingImages()[0].GetPointer());
-    resampler->SetSize( proc->fixedImage()->GetLargestPossibleRegion().GetSize() );
+    resampler->SetInput(static_cast<const MovingImageType*>(proc->movingImages()[0].GetPointer()));
+    resampler->SetSize(proc->fixedImage()->GetLargestPossibleRegion().GetSize());
     resampler->SetOutputOrigin( proc->fixedImage()->GetOrigin() );
     resampler->SetOutputSpacing( proc->fixedImage()->GetSpacing() );
     resampler->SetOutputDirection( proc->fixedImage()->GetDirection() );
-    resampler->SetDefaultPixelValue( 0 );
+    resampler->SetDefaultPixelValue(0);
 
     try
     {
